--- a/ja boi.html
+++ b/ja boi.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+        <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="ja boi.css" />
+        <script src="ja boi.js" ></script>
 <title>Budget calculator</title>
 </head>
 <body>
