--- a/ja boi.html
+++ b/ja boi.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="ja boi.css">
 	</head>
 	<body>
 		<div class="container grid_layout">
@@ -15,7 +15,8 @@
           </select>
           <input id="add_description" type="text" name="description" placeholder="Apraksts">
           <input id="add_value" type="number" name="value" placeholder="summa">
-          <button onclick="addtolist()">Pievienot</button>
+          <button class='myButton'onclick="addtolist()">Pievienot</button>
+         
         </div>
       </div>
 
@@ -38,5 +39,5 @@
     </div>
     <button onclick="clearlocal()">Clear Local Storage</button>
   </body>
-  <script src="mainJS.js"></script>
+  <script src="ja boi1.js"></script>
 </html>
